--- a/css/styles.css
+++ b/css/styles.css
@@ -159,8 +159,8 @@ body {
   margin: 5px;
   padding: 2%;
 }
-.footer-links:hover{
-  color: #ff4c68;
+.instagram .youtube{
+  color: red;
 }
 .ftxt{
   margin: 10px;
